@@ -28,6 +28,15 @@ local updateSafeZone = function(self)
 	end
 end
 
+local UNIT_SPELLCAST_SENT = function (self, event, unit, spell, rank, target)
+	local castbar = self.Castbar
+	if target and target ~= "" then
+		castbar.curTarget = target
+	else
+		castbar.curTarget = nil
+	end
+end
+
 local UNIT_SPELLCAST_START = function(self, event, unit, spell)
 	if(self.unit ~= unit) then return end
 
@@ -366,6 +375,7 @@ local Enable = function(object, unit)
 		castbar.ForceUpdate = ForceUpdate
 
 		if(not (unit and unit:match'%wtarget$')) then
+			object:RegisterEvent("UNIT_SPELLCAST_SENT", UNIT_SPELLCAST_SENT)
 			object:RegisterEvent("UNIT_SPELLCAST_START", UNIT_SPELLCAST_START)
 			object:RegisterEvent("UNIT_SPELLCAST_FAILED", UNIT_SPELLCAST_FAILED)
 			object:RegisterEvent("UNIT_SPELLCAST_STOP", UNIT_SPELLCAST_STOP)
@@ -419,6 +429,7 @@ local Disable = function(object, unit)
 	local castbar = object.Castbar
 
 	if(castbar) then
+		object:UnregisterEvent("UNIT_SPELLCAST_SENT", UNIT_SPELLCAST_SENT)
 		object:UnregisterEvent("UNIT_SPELLCAST_START", UNIT_SPELLCAST_START)
 		object:UnregisterEvent("UNIT_SPELLCAST_FAILED", UNIT_SPELLCAST_FAILED)
 		object:UnregisterEvent("UNIT_SPELLCAST_STOP", UNIT_SPELLCAST_STOP)
