@@ -68,6 +68,7 @@ L["Bars will transition smoothly."] = "Bars will transition smoothly."
 L["Below Minimap"] = "Below Minimap"
 L["BG"] = "BG"
 L["BGL"] = "BGL"
+L["BG Map"] = "BG Map"
 L["BG Score"] = "BG Score"
 L["Binding"] = "Binding"
 L["Binds Discarded"] = "Binds Discarded"
@@ -96,6 +97,7 @@ L["Change the position of the experience/reputation bar."] = "Change the positio
 L["Character: "] = "Character: "
 L["Character Frame"] = "Character Frame"
 L["Chat"] = "Chat"
+L["Chat Bubbles"] = "Chat Bubbles"
 L["CHAT_DESC"] = "Adjust chat settings for ElvUI."
 L["Chat Set"] = "Chat Set"
 L["Chest"] = "Chest"
@@ -140,6 +142,7 @@ L["Cooldown Text"] = "Cooldown Text"
 L["copperabbrev"] = "|cffeda55fc|r"
 L["Copy a profile, you can copy the settings from a selected profile to the currently active profile."] = "Copy a profile, you can copy the settings from a selected profile to the currently active profile."
 L["Copy From"] = "Copy From"
+L["Copy Text"] = "Copy Text"
 L["Count"] = "Count"
 L["Create a filter, once created a filter can be set inside the buffs/debuffs section of each unit."] = "Create a filter, once created a filter can be set inside the buffs/debuffs section of each unit."
 L["Create Filter"] = "Create Filter"
@@ -187,9 +190,11 @@ L["Display level text on nameplate for nameplates that belong to units that aren
 L["Display macro names on action buttons."] = "Display macro names on action buttons."
 L["Display Player"] = "Display Player"
 L["Display raid reminder bar on the minimap."] = "Display raid reminder bar on the minimap."
+L["Display Target"] = "Display Target"
 L["Display the hyperlink tooltip while hovering over a hyperlink."] = "Display the hyperlink tooltip while hovering over a hyperlink."
 L["Display the item id on item tooltips."] = "Display the item id on item tooltips."
 L["Display the rested icon on the unitframe."] = "Display the rested icon on the unitframe."
+L["Display the target of the cast on the castbar."] = "Display the target of the cast on the castbar."
 L["Display tick marks on the castbar for channelled spells. This will adjust automatically for spells like Drain Soul and add additional ticks based on haste."] = "Display tick marks on the castbar for channelled spells. This will adjust automatically for spells like Drain Soul and add additional ticks based on haste."
 L["Display your personal debuffs over the nameplate."] = "Display your personal debuffs over the nameplate."
 L["DND"] = "DND"
@@ -205,6 +210,7 @@ L["ELVUI_CREDITS"] = "I would like to give out a special shout out to the follow
 L["ELVUI_DESC"] = "ElvUI is a complete User Interface replacement addon for World of Warcraft."
 L["ElvUI Installation"] = "ElvUI Installation"
 L["Embedded Addon"] = "Embedded Addon"
+L["Embedded Bar Height"] = "Embedded Bar Height"
 L["Empty Slot"] = "Empty Slot"
 L["Enable"] = "Enable"
 L["Enable/Disable the all-in-one bag."] = "Enable/Disable the all-in-one bag."
@@ -517,6 +523,7 @@ L["Size"] = "Size"
 L["Size of the indicator icon."] = "Size of the indicator icon."
 L["Skins"] = "Skins"
 L["SKINS_DESC"] = "Adjust Skin settings."
+L["Skin the blizzard chat bubbles."] = "Skin the blizzard chat bubbles."
 L["Skip Process"] = "Skip Process"
 L["Smart"] = "Smart"
 L["Smart Raid Filter"] = "Smart Raid Filter"
@@ -553,6 +560,7 @@ L["Spellbook"] = "Spellbook"
 L["Spell not found."] = "Spell not found."
 L["Spell not found in list."] = "Spell not found in list."
 L["Spent:"] = "Spent:"
+L["Stable"] = "Stable"
 L["Stack Items"] = "Stack Items"
 L["Stack Special"] = "Stack Special"
 L["StatusBar Texture"] = "StatusBar Texture"
@@ -591,6 +599,7 @@ L["The font that the core of the UI will use."] = "The font that the core of the
 L["The font that the unitframes will use."] = "The font that the unitframes will use."
 L["The font that unitframes will use"] = "The font that unitframes will use"
 L["The frame is not shown unless you mouse over the frame."] = "The frame is not shown unless you mouse over the frame."
+L["The height of the bars while skada is embedded."] = "The height of the bars while skada is embedded."
 L["The in-game configuration menu can be accesses by typing the /ec command or by clicking the 'C' button on the minimap. Press the button below if you wish to skip the installation process."] = "The in-game configuration menu can be accesses by typing the /ec command or by clicking the 'C' button on the minimap. Press the button below if you wish to skip the installation process."
 L["The initial anchor point of the buffs on the frame"] = "The initial anchor point of the buffs on the frame"
 L["The maximum number of columns that the header will create."] = "The maximum number of columns that the header will create."
@@ -717,10 +726,3 @@ L["Your current resolution is %s, this is considered a %s resolution."] = "Your 
 L["Your items have been repaired for: "] = "Your items have been repaired for: "
 L["Your items have been repaired using guild bank funds for: "] = "Your items have been repaired using guild bank funds for: "
 L["Your version of ElvUI is out of date. You can download the latest version from www.curse.com"] = "Your version of ElvUI is out of date. You can download the latest version from www.curse.com"
-L['Stable'] = true;
-L['Chat Bubbles'] = true;
-L['Skin the blizzard chat bubbles.'] = true;
-L["BG Map"] = true;
-L['Embedded Bar Height'] = true;
-L['The height of the bars while skada is embedded.'] = true;
-L["Copy Text"] = true;
